--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,7 +68,7 @@ body {
   }
   
   #resultsSection {
-    margin-top: 20px;
+    margin-top: 2px;
   }
   
   pre {
@@ -82,10 +82,16 @@ body {
   
   .evaluation-card {
     background: #f8f8f8;
-    padding: 15px;
-    margin-bottom: 10px;
+    padding: 1px 15px 15px 15px; /* Reduce top padding */
+    margin-top: 1px;
+    margin-bottom: 2px;
     border-radius: 5px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.evaluation-card h3 {
+    margin-top: 0; /* Removes extra space above the title */
+    margin-bottom: 5px; /* Keeps a small gap before the evaluation content */
 }
 
 .evaluation-content {
