--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Redaction & Evaluation Tool</h1>
+    <h1><u>Document Evaluation Tool</u></h1>
     
     <!-- Upload and Redaction Section -->
     <form id="uploadForm">
