spinner during processing

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,12 @@
     </div>
 
 
-
+    <!-- ✅ Add the loading spinner here (outside the form) -->
+  <div id="loadingSpinner" class="hidden">
+    <div class="spinner"></div>
+    <p>Processing... Please wait.</p>
+  </div>
+  
   <script src="/static/js/script.js"></script>
 </body>
 </html>
