--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
         </form>
 
         <div id="evaluationTable" class="hidden"></div>
+        <div id="yesNoEvaluationTable" class="hidden"></div>
 
         <div id="evaluationResults" class="hidden">
           <h3>📊 Detailed Results</h3>
@@ -51,8 +52,7 @@
       </div>
     </div>
 
-
-    <!-- ✅ Add the loading spinner here (outside the form) -->
+    
   <div id="loadingSpinner" class="hidden">
     <div class="spinner"></div>
     <p>Processing... Please wait.</p>
